--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -320,6 +320,7 @@
     margin-top: $global-margin * 2;
     @include media-breakpoint-down(sm) {
       flex-direction: column-reverse !important;
+
     }
   }
   &__continue-button {
@@ -328,6 +329,25 @@
     color: $brand-color-green;
     &:hover {
       color: #29AB5D;
+    }
+  }
+
+}
+
+.checkout {
+
+    /* padding: 2rem 1rem; */
+    /* margin-top: 2rem; */
+    @include media-breakpoint-down(sm) {
+      .cart__bottom {
+        &-bar {
+        padding: 0;
+        margin-top: 0;
+        flex-direction: column !important;
+        }
+        &-panel {
+          margin-top: -4rem;
+        }
     }
   }
 }
