--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -2,6 +2,7 @@
   padding-top: 48px;
   @include media-breakpoint-down(sm) {
     margin-top: 1.5em;
+    margin-bottom: 4rem;
   }
   &__overview {
     margin-bottom: 2rem;
@@ -13,6 +14,12 @@
     padding-bottom: 34px;
     height: 100%;
     border: 1px solid $gray-color-2;
+    @include media-breakpoint-down(sm) {
+      border-bottom: 1px solid #EBE9E6 !important;
+      border: 0;
+      padding-top: 18px;
+      padding-bottom: 18px;
+    }
     .payment__card__element {
       font-size: 12px;
       margin-right: inherit;
@@ -82,6 +89,9 @@
   }
   h2, h3 {
     margin: $global-margin * 2 0;
+    @include media-breakpoint-down(sm) {
+      margin: 2rem 0 !important;
+    }
     text-transform: uppercase;
   }
   hr {
@@ -228,6 +238,17 @@
     @include media-breakpoint-down(sm) {
       h3 {
         margin-top: inherit;
+
+      }
+      .cart__bottom-bar-panel {
+        margin-top: 2rem;
+        display: inherit;
+        .checkout__toc {
+          margin-bottom: 1rem;
+        }
+      }
+      .cart {
+        border: 0;
       }
     }
     .placing-order {
