--- a/assets/css/storefront/components/_page.scss
+++ b/assets/css/storefront/components/_page.scss
@@ -93,6 +93,8 @@
 
       @include media-breakpoint-down(sm) {
         margin-top: 60px;
+        margin-bottom: 20px;
+        padding: 0;
       }
 
       .slider {
