--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -145,7 +145,10 @@
     padding-top: $global-padding * 2;
     padding-bottom: $global-padding * 3.5;
     padding-left: $global-padding * 2;
-    padding-top: $global-padding * 2;
+
+    @include media-breakpoint-down(sm) {
+      padding-bottom: inherit;
+    }
     h4 {
       margin-bottom: $global-padding;
     }
