--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -17,7 +17,9 @@
     @include media-breakpoint-down(sm) {
       border-bottom: 1px solid #EBE9E6 !important;
       border: 0;
+      padding-left: 0.2rem;
       padding-top: 18px;
+      padding-right: 0;
       padding-bottom: 18px;
     }
     .payment__card__element {
