--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -1,6 +1,9 @@
 #audioplayer {
   background-color: $brand-color-black;
   height: 70px;
+  @include media-breakpoint-down(sm) {
+    height: 140px;
+  }
   bottom: 0px;
   width: 100%;
   position: fixed;
@@ -41,6 +44,9 @@
     width: 100% !important;
     display: flex;
     flex-direction: column;
+    @include media-breakpoint-down(sm) {
+      padding: inherit;
+    }
     &__info-box {
       letter-spacing: 0px;
       display: flex;
@@ -50,253 +56,300 @@
       font-size: 12px;
       .track-info {
         min-width: 80%;
-        //
         overflow: hidden;
         white-space: nowrap;
-      }
-      .release-title {
-        font-size: $font-size-sm;
-        line-height: $font-size-sm;
-        color: $gray-color-1;
-        padding-right: 2%;
-      }
-      .track-time {
-        display: inline-flex;
-        &__remaining {
-          color: $gray-color-2
-        }
-        &__total {
-          color: $gray-color-1
-        }
-      }
-    }
-    .position-slider {
-      margin-bottom: auto;
-      position: relative;
-      .slider {
-        position: absolute;
-        width: 100%;
-        height: 4px;
-        background-color: black;
-        &:after {
-          position: absolute;
-          content: "";
-          padding: 20px;
+        @include media-breakpoint-down(sm) {
+          margin-right: auto;
+          margin-left: .1rem;
+          min-width: inherit;
           width: 100%;
-          height: 3px;
-          left: 0;
-          top: -15px;
-          cursor: e-resize;
-        }
-      }
-      .slider-fill {
-        background-color: $brand-color-green;
-        height: 100%;
-      }
-    }
-  }
-  .audio-control {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    &__buttons {
-      display: inline-flex;
-      justify-content: space-around;
-      width: 100%;
-      padding: 2px;
-    }
-    &__btn {
-      position: relative;
-      &.play {
-        &:hover {
-          background-color: $brand-color-green-hover !important;
+          .track-name {
+            flex-direction: column !important;
+          }
         }
       }
     }
-  }
-  .close {
-    background:
-            -webkit-linear-gradient(-45deg, transparent 0%, transparent 48%, $gray-color-2 48%, $gray-color-2 52%, transparent 52%, transparent 100%),
-            -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, $gray-color-2 48%, $gray-color-2 52%, transparent 52%, transparent 100%);
-  }
-}
-
-.playlist {
-  background-color: $brand-color-black;
-  color: $gray-color-1;
-  position: fixed;
-  bottom: 70px;
-  z-index: 9;
-  max-height: 80%;
-  width: 100%;
-  font-size: $font-size-sm;
-  overflow-y: scroll;
-  &__item {
-    display: flex;
-    height: 60px;
-    border-bottom: 1px solid #414242;
-    position: relative;
-    &:hover:after {
-      content: '';
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      border-radius: 2px;
-      background-color: white;
-      opacity: 0.1;
-    }
-    &:last-child {
-      margin-bottom: 140px;
-    }
-  }
-  .play-box {
-    position: relative;
-    width: 146px;
-    display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    &:last-child {
-      border-right: none;
-    }
-    .playing {
-      border: 2px solid $brand-color-green;
-      border-radius: 12px;
-      height: 24px;
-      width: 24px;
-      polygon {
-        fill: $brand-color-green !important;
-      }
-      .play-release-button {
-        height: 100% !important;
-        width: 100% !important;
-      }
-    }
-  }
-  .track-info {
-    width: 80%;
-    display: flex;
-    padding-left: 1.5em;
-    align-items: center;
-    .playlist-position {
-      margin-right: 0.5em;
-    }
-  }
-  .track-name {
-    width: 80%;
-    display: flex;
-    padding-left: 1.5em;
-    align-items: center;
-    .playlist-position {
-      margin-right: 0.5em;
-    }
-  }
-  .release {
-    &-title {
-      width: 376px;
+    .audio-control {
       display: flex;
       align-items: center;
+      justify-content: center;
+      @include media-breakpoint-down(sm) {
+        margin-left: auto;
+        margin-right: auto;
+      }
+      &__buttons {
+        display: inline-flex;
+        justify-content: space-around;
+        width: 100%;
+        padding: 2px;
+        @include media-breakpoint-down(sm) {
+          display: flex;
+        }
+      }
+      &__btn {
+        position: relative;
+        &.play {
+          &:hover {
+            background-color: $brand-color-green-hover !important;
+          }
+        }
+        @include media-breakpoint-down(sm) {
+          height: 48px !important;
+          width: 48px !important;
+        }
+      }
     }
-    &-label {
-      width: 250px;
-      display: flex;
-      align-items: center;
+    .close {
+      background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 48%, $gray-color-2 48%, $gray-color-2 52%, transparent 52%, transparent 100%),
+      -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, $gray-color-2 48%, $gray-color-2 52%, transparent 52%, transparent 100%);
     }
   }
-}
 
-.close-playlist {
-  margin: auto;
-  width: 14px;
-  height: 14px;
-  background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 48%, white 48%, white 52%, transparent 52%, transparent 100%),
-  -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, white 48%, white 52%, transparent 52%, transparent 100%);
-
-}
-
-.ap {
-  &__element {
-    border-right: 1px solid #414242;
-    &:last-child {
-      border-right: none;
-    }
-  }
-}
-
-.track-artist {
-  color: $gray-color-2
-}
-
-.track-title {
-  color: $gray-color-1
-}
-
-@media screen {
-  input[type="range"] {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    overflow: hidden;
+  .playlist {
+    background-color: $brand-color-black;
+    color: $gray-color-1;
+    position: fixed;
+    bottom: 70px;
+    z-index: 9;
+    max-height: 80%;
     width: 100%;
-    position: absolute;
-    margin-top: -8px;
-    background-color: transparent;
-    border: none;
+    font-size: $font-size-sm;
+    overflow-y: scroll;
+    &__item {
+      display: flex;
+      height: 60px;
+      border-bottom: 1px solid #414242;
+      position: relative;
+      &:hover:after {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        border-radius: 2px;
+        background-color: white;
+        opacity: 0.1;
+      }
+      &:last-child {
+        margin-bottom: 140px;
+      }
+    }
+    .play-box {
+      position: relative;
+      width: 146px;
+      display: -webkit-box;
+      display: -moz-box;
+      display: -ms-flexbox;
+      display: -webkit-flex;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &:last-child {
+        border-right: none;
+      }
+      .playing {
+        border: 2px solid $brand-color-green;
+        border-radius: 12px;
+        height: 24px;
+        width: 24px;
+        polygon {
+          fill: $brand-color-green !important;
+        }
+        .play-release-button {
+          height: 100% !important;
+          width: 100% !important;
+        }
+      }
+    }
+    .track-info {
+      width: 80%;
+      display: flex;
+      padding-left: 1.5em;
+      align-items: center;
+      .playlist-position {
+        margin-right: 0.5em;
+      }
+    }
+    .track-name {
+      width: 80%;
+      display: flex;
+      padding-left: 1.5em;
+      align-items: center;
+      .playlist-position {
+        margin-right: 0.5em;
+      }
+    }
+    .release {
+      &-title {
+        width: 376px;
+        display: flex;
+        align-items: center;
+      }
+      &-label {
+        width: 250px;
+        display: flex;
+        align-items: center;
+      }
+    }
   }
 
-  input[type=range]::-webkit-slider-thumb {
-    -webkit-appearance: none;
+  .close-playlist {
+    margin: auto;
+    width: 14px;
+    height: 14px;
+    background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 48%, white 48%, white 52%, transparent 52%, transparent 100%),
+    -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, white 48%, white 52%, transparent 52%, transparent 100%);
+
   }
 
-  input[type=range]::-moz-range-thumb {
+  .ap {
+    &__element {
+      border-right: 1px solid #414242;
+      &:last-child {
+        border-right: none;
+      }
+    }
+  }
+
+  .track-artist {
+    color: $gray-color-2
+  }
+
+  .track-title {
+    color: $gray-color-1
+  }
+
+  @media screen {
+    input[type="range"] {
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      overflow: hidden;
+      width: 100%;
+      position: absolute;
+      margin-top: -8px;
+      background-color: transparent;
+      border: none;
+    }
+
+    input[type=range]::-webkit-slider-thumb {
+      -webkit-appearance: none;
+    }
+
+    input[type=range]::-moz-range-thumb {
+      position: relative;
+      width: 0;
+      height: 0;
+    }
+
+    input[type=range]::-moz-focus-outer {
+      border: 0;
+    }
+
+    input[type='range']::-webkit-slider-runnable-track {
+      height: 20px;
+      -webkit-appearance: none;
+      -moz-appearance: none;
+      cursor: e-resize;
+    }
+
+    input[type=range]:focus {
+      outline: none;
+    }
+
+    input[type="range"]::-webkit-slider-thumb {
+      position: relative;
+      width: 1px;
+      -webkit-appearance: none;
+      //-moz-appearance: none;
+      height: 22px;
+      //cursor: e-resize;
+    }
+  }
+
+  /** FF*/
+  input[type="range"]::-moz-range-progress {
+    background-color: #43e5f7;
+  }
+
+  input[type="range"]::-moz-range-track {
+    background-color: #9a905d;
+  }
+
+  /* IE*/
+  input[type="range"]::-ms-fill-lower {
+    background-color: #43e5f7;
+  }
+
+  input[type="range"]::-ms-fill-upper {
+    background-color: #9a905d;
+  }
+
+  .audioplayer {
+    width: 100%;
+    .release-image {
+      width: 105px;
+      min-width: 105px;
+      img {
+        max-width: 100%;
+        width: 100%;
+      }
+    }
+  }
+
+  .position-slider {
+    margin-bottom: auto;
     position: relative;
-    width: 0;
-    height: 0;
+    @include media-breakpoint-down(sm) {
+      width: 100%;
+      padding-top: 4px;
+      padding-bottom: 4px;
+    }
+    .slider {
+      position: absolute;
+      width: 100%;
+      height: 4px;
+      background-color: black;
+      @include media-breakpoint-down(sm) {
+        height: 16px;
+      }
+      &:after {
+        position: absolute;
+        content: "";
+        padding: 20px;
+        width: 100%;
+        height: 3px;
+        @include media-breakpoint-down(sm) {
+          height: 15px;
+        }
+        left: 0;
+        top: -15px;
+        cursor: e-resize;
+      }
+    }
+    .slider-fill {
+      background-color: $brand-color-green;
+      height: 100%;
+    }
   }
 
-  input[type=range]::-moz-focus-outer {
-    border: 0;
+  .track-time {
+    display: inline-flex;
+    &__remaining {
+      color: $gray-color-2
+    }
+    &__total {
+      color: $gray-color-1
+    }
+    @include media-breakpoint-down(sm) {
+      margin-left: 8px;
+    }
   }
 
-  input[type='range']::-webkit-slider-runnable-track {
-    height: 20px;
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    cursor: e-resize;
+  .release-title {
+    font-size: $font-size-sm;
+    line-height: $font-size-sm;
+    color: $gray-color-1;
+    padding-right: 2%;
   }
-
-  input[type=range]:focus {
-    outline: none;
-  }
-
-  input[type="range"]::-webkit-slider-thumb {
-    position: relative;
-    width: 1px;
-    -webkit-appearance: none;
-    //-moz-appearance: none;
-    height: 22px;
-    //cursor: e-resize;
-  }
-}
-
-/** FF*/
-input[type="range"]::-moz-range-progress {
-  background-color: #43e5f7;
-}
-
-input[type="range"]::-moz-range-track {
-  background-color: #9a905d;
-}
-
-/* IE*/
-input[type="range"]::-ms-fill-lower {
-  background-color: #43e5f7;
-}
-
-input[type="range"]::-ms-fill-upper {
-  background-color: #9a905d;
 }
