--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -200,7 +200,10 @@
     height: 14px;
     background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 48%, white 48%, white 52%, transparent 52%, transparent 100%),
     -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, white 48%, white 52%, transparent 52%, transparent 100%);
-
+    @include media-breakpoint-down(sm) {
+      margin-left: 0px;
+      margin-top: -6px;
+    }
   }
 
   .ap {
@@ -290,10 +293,23 @@
     .release-image {
       width: 105px;
       min-width: 105px;
+      margin-right: 1em;
       img {
         max-width: 100%;
         width: 100%;
       }
+    }
+    .controls {
+      position: absolute;
+      top: 0;
+      right: 5%;
+      z-index: -1;
+      margin-top: -2.8rem;
+      background: $brand-color-black;
+      height: 100px;
+      width: 100px;
+      border-radius: 8px;
+
     }
   }
 
@@ -309,9 +325,12 @@
       position: absolute;
       width: 100%;
       height: 4px;
-      background-color: black;
+      background-color: $gray-color-1;
+
+      //opacity: .8;
       @include media-breakpoint-down(sm) {
         height: 16px;
+        border-radius: 4px;
       }
       &:after {
         position: absolute;
@@ -321,6 +340,7 @@
         height: 3px;
         @include media-breakpoint-down(sm) {
           height: 15px;
+          border-radius: 4px;
         }
         left: 0;
         top: -15px;
@@ -352,4 +372,22 @@
     color: $gray-color-1;
     padding-right: 2%;
   }
+  .cart-button {
+    width: 34px;
+    height: 34px;
+    margin-left: 1rem;
+    margin-top: 0.5rem;
+    img {
+      width: 20px;
+      margin-top: 4px;
+      margin-left: 0px;
+    }
+  }
+  .playlist-button {
+    width: 40px;
+    height: 40px;
+    margin-left: 1rem;
+    margin-top: 1.4rem;
+  }
 }
+
