--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -332,6 +332,7 @@
       padding-left: 8px;
       padding-right: 80px;
       width: 100%;
+      height: 80px;
     }
     &:hover:after {
       content: '';
@@ -407,6 +408,11 @@
   }
   .track-info {
     width: 220px;
+    &-panel {
+      width: 100%;
+      margin-top: auto;
+      margin-bottom: auto;
+    }
   }
   //.track-title {
   //  @include media-breakpoint-down(sm) {
