--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -268,6 +268,9 @@
   width: 100%;
   font-size: $font-size-sm;
   overflow-y: scroll;
+  @include media-breakpoint-down(sm) {
+    max-height: 70%
+  }
   &__item {
     display: flex;
     height: 60px;
