--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -136,6 +136,22 @@
     .mobile-search-icon {
       padding-right: $global-padding;
     }
+    .search-visible {
+      svg {
+        * {
+          fill: $brand-color-green;
+        }
+      }
+    }
+    @include media-breakpoint-down(sm) {
+      .form-inline {
+        background-color: $brand-color-black;
+        padding-left: 4px;
+        padding-right: 4px;
+        padding-top: 8px;
+        padding-bottom: 8px;
+      }
+    }
   }
   &__brand {
     width: 100%;
@@ -169,6 +185,12 @@
       transition: width .2s ease-in;
       float: right;
       position: relative;
+      @include media-breakpoint-down(sm) {
+        position: fixed !important;
+        width: 100% !important;
+        left: 0 !important;
+        margin-top: 80px !important;
+      }
       .mobile-close-search {
         position: absolute;
         cursor: pointer;
@@ -206,6 +228,13 @@
           margin: auto;
           height: 1.5rem;
           padding: $global-padding / 7;
+        }
+      }
+      @include media-breakpoint-down(sm) {
+        .search-input {
+          padding-left: 8px !important;
+          padding: $global-padding * 1 $global-padding * 1 $global-padding * 1 $global-padding * 2 !important;
+          border-radius: 4px !important;
         }
       }
       @include media-breakpoint-down(md) {
