--- a/assets/css/storefront/components/_search.scss
+++ b/assets/css/storefront/components/_search.scss
@@ -11,6 +11,9 @@ $font-size-xs-fixed: 12px;
     width: 100%;
     margin-right: auto;
     box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.2);
+    @include media-breakpoint-down(sm) {
+      margin-top: 0;
+    }
     &__header {
       height: 40px;
       border-bottom: 1px solid #eee;
