--- a/assets/css/storefront/components/_search.scss
+++ b/assets/css/storefront/components/_search.scss
@@ -13,6 +13,7 @@ $font-size-xs-fixed: 12px;
     box-shadow: 0px 0px 3px 1px rgba(0,0,0,0.2);
     @include media-breakpoint-down(sm) {
       margin-top: 0;
+      height: 70vh;
     }
     &__header {
       height: 40px;
@@ -116,6 +117,9 @@ $font-size-xs-fixed: 12px;
     position: absolute;
     top: 5px;
     right: 16px;
+    @include media-breakpoint-down(sm) {
+      top: inherit;
+    }
   }
 }
 
