Tweak buttons spacing

--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -452,6 +452,7 @@
     margin-top: auto;
     margin-bottom: auto;
     //margin-left: 4rem;
+    margin-left: 10px;
     background-color: #30C46C;
     img {
       height: 20px;
@@ -473,7 +474,7 @@
     margin-top: auto;
     margin-bottom: auto;
     margin-right: 8px;
-    max-width: 160px;
+    max-width: 140px;
     span {
       display: inline-block;
       text-indent: 0;
