--- a/assets/css/storefront/components/_account.scss
+++ b/assets/css/storefront/components/_account.scss
@@ -5,6 +5,9 @@
       margin-bottom: 0.5rem;
     }
   }
+  @include media-breakpoint-down(sm) {
+     margin-bottom: 4rem;
+  }
   &__nav {
     width: 90%;
     padding: 2rem;
