--- a/assets/css/storefront/components/_cart.scss
+++ b/assets/css/storefront/components/_cart.scss
@@ -23,7 +23,9 @@
   &__line {
     padding: $global-padding * 2;
     @include media-breakpoint-down(sm) {
-      padding: 2rem 0;
+      //padding: 2rem 0;
+      padding: 8px;
+      border-bottom: 0;
     }
     margin-top: 0px !important;
 
@@ -46,6 +48,10 @@
         margin-top: $global-margin / 2;
         margin-bottom: 0;
         line-height: 1rem;
+        @include media-breakpoint-down(sm) {
+          margin-top: auto;
+          margin-bottom: auto;
+        }
         .release {
           &__name {
 
