Tweak the account view for mobile

--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -763,10 +763,12 @@
 
 .orders-available {
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .orders-missing {
   margin-top: 2rem;
+  margin-bottom: 1rem;
 }
 
 .my-purchases {
