--- a/assets/css/storefront/components/_account.scss
+++ b/assets/css/storefront/components/_account.scss
@@ -62,6 +62,7 @@
           }
           &:last-child {
             padding-right: 16px !important;
+            width: 55px;
           }
         }
       }
@@ -94,5 +95,42 @@
         padding-left: inherit !important;
       }
     }
+  }
+  .order-release {
+    display: flex;
+    padding: 0.6rem;
+    border-bottom: 1px solid $gray-color-2;
+    img {
+      max-width: 60px;
+      width: 60px;
+    }
+    .release__infos {
+      max-width: 170px;
+    }
+    .release__label {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+    .release__title {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+    .release__name {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+    .order-controls {
+      display: flex;
+      flex-direction: column;
+      margin-left: auto;
+      padding-left: 1rem;
+      font-size: 32px;
+    }
+  }
+  &-list {
+    margin-bottom: .5rem;
   }
 }
