--- a/assets/css/storefront/components/_account.scss
+++ b/assets/css/storefront/components/_account.scss
@@ -126,7 +126,7 @@
       display: flex;
       flex-direction: column;
       margin-left: auto;
-      padding-left: 1rem;
+      padding-left: .5rem;
       font-size: 32px;
     }
   }
