--- a/assets/css/storefront/components/_checkout.scss
+++ b/assets/css/storefront/components/_checkout.scss
@@ -388,6 +388,10 @@
     display: flex;
     flex-direction: row;
     cursor: pointer;
+    @include media-breakpoint-down(sm) {
+      top: 30px;
+      right: 0;
+    }
   }
 }
 
