--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -4,6 +4,9 @@
 }
 
 .dropdown {
+  @include media-breakpoint-down(sm) {
+    display: none !important;
+  }
   &__button {
     background-color: transparent !important;
     color: $brand-color-black !important;
