--- a/assets/css/storefront/components/_header.scss
+++ b/assets/css/storefront/components/_header.scss
@@ -501,6 +501,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    @include media-breakpoint-down(sm) {
+      height: 26px;
+      width: 26px;
+      margin-left: auto;
+      margin-right: auto;
+    }
     .badge {
       display: inherit !important;
       position: absolute;
@@ -514,14 +520,17 @@
       height: 6px;
       text-align: center;
       cursor: default;
+      @include media-breakpoint-down(sm) {
+        width: 10px;
+        height: 10px;
+        right: -4;
+        top: 0
+      }
       &.empty {
         background-color: $gray-color-2;
       }
       &.reserve {
         background-color: $brand-secondary-color-yellow;
-      }
-      @include media-breakpoint-down(sm) {
-        right: 0;
       }
     }
   }
