Add playlist down button

--- a/assets/css/storefront/components/_shared.scss
+++ b/assets/css/storefront/components/_shared.scss
@@ -24,7 +24,8 @@
 
 .burger-menu {
   position: relative;
-  padding-left: 1.25em;
+  //padding-left: 1.25em;
+  padding-left: 1em;
   margin: auto;
 }
 .burger-menu:before {
