--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -85,14 +85,15 @@
     background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 48%, white 48%, white 52%, transparent 52%, transparent 100%),
     -webkit-linear-gradient(45deg, transparent 0%, transparent 48%, white 48%, white 52%, transparent 52%, transparent 100%);
     @include media-breakpoint-down(sm) {
-      margin-left: 0px;
-      margin-top: -6px;
+      //margin-left: 0px;
+      //margin-top: -6px;
+      margin: auto;
     }
     &-box {
-      width: 40px;
-      height: 40px;
-      margin-top: 23px;
-      margin-left: 1rem;
+      //width: 40px;
+      //height: 40px;
+      //margin-top: 23px;
+      //margin-left: 1rem;
     }
   }
 
@@ -249,10 +250,10 @@
     }
   }
   .playlist-button {
-    width: 40px;
-    height: 40px;
-    margin-left: 1rem;
-    margin-top: 1.4rem;
+    //width: 40px;
+    //height: 40px;
+    //margin-left: 1rem;
+    //margin-top: 1.4rem;
   }
 
 
@@ -384,10 +385,14 @@
     z-index: -1;
     margin-top: -2.8rem;
     background: $brand-color-black;
-    height: 100px;
-    width: 140px;
-    border-radius: 4px;
-
+    height: 50px;
+    width: 150px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    //border-radius: 4px;
+    .ap__element {
+      flex-basis: 100%;
+    }
   }
   .audio-control {
     display: flex;
