Unify play/add-to-cart inhomognity

--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -617,7 +617,7 @@
       .release-list-play {
         margin: auto auto 8px 8px;
         display: flex;
-        flex-direction: row;
+        flex-direction: row-reverse;
         left: inherit;
         right: inherit;
         top: inherit;
