Move last summary higher

--- a/assets/css/storefront/components/_releaselist.scss
+++ b/assets/css/storefront/components/_releaselist.scss
@@ -264,6 +264,9 @@
     border-bottom: 0;
     min-height: 300px;
     padding-bottom: 0;
+    &:last-child {
+      padding-bottom: 6rem;
+    }
   }
   &__header {
     width: 100%;
