Remove with in playlist

--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -350,6 +350,9 @@
       width: 376px;
       display: flex;
       align-items: center;
+      @include media-breakpoint-down(sm) {
+        width: auto;
+      }
     }
     &-label {
       width: 250px;
