Remove margin-left from carts play

--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -311,6 +311,7 @@
       height: inherit;
       .play {
         margin-right: 0;
+        margin-left: 0;
         position: relative;
         &:after {
           content: "";
