--- a/assets/css/storefront/components/_mobile.scss
+++ b/assets/css/storefront/components/_mobile.scss
@@ -760,10 +760,11 @@
       display: inline-block;
       padding: 3px;
       &-box {
-        margin-left: auto;
+        margin-left: auto !important;
         /*margin-right: 16px;*/
-        margin-top: auto;
-        margin-bottom: auto;
+        margin-top: auto !important;
+        margin-bottom: auto !important;
+        margin: inherit;
       }
       &-down {
         transform: rotate(45deg);
