--- a/assets/css/storefront/components/_audioplayer.scss
+++ b/assets/css/storefront/components/_audioplayer.scss
@@ -271,7 +271,7 @@
   font-size: $font-size-sm;
   overflow-y: scroll;
   @include media-breakpoint-down(sm) {
-    max-height: 70%
+    max-height: 60%;
   }
   &__item {
     display: flex;
