Add Charts name

--- a/assets/css/storefront/components/_account.scss
+++ b/assets/css/storefront/components/_account.scss
@@ -30,6 +30,9 @@
       width: 100%;
       background-color: $brand-color-green;
     }
+    &__section {
+      width: 100%;
+    }
   }
   &__menu-item {
     cursor: pointer;
