--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -1,6 +1,9 @@
 @import "variables";
 
-@import "../../../node_modules/bootstrap/scss/bootstrap.scss";
+@import '../../../node_modules/bootstrap/scss/functions';
+@import '../../../node_modules/bootstrap/scss/variables';
+@import '../../../node_modules/bootstrap/scss/mixins/breakpoints';
+@import '../../../node_modules/bootstrap/scss/mixins/transition';
 
 @import "components/buttons";
 @import "components/labels";
