Enable font face

--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -31,6 +31,7 @@
 @import "components/genres";
 @import "components/carousel";
 @import "components/shared";
+@import "components/fonts";
 @import "components/social";
 @import "components/search";
 @import "components/charts";
