Remove unused assets

--- a/assets/css/storefront/components/_summary.scss
+++ b/assets/css/storefront/components/_summary.scss
@@ -6,7 +6,7 @@
     padding: 1rem 1.5rem;
     background-color: $gray-color-2;
     font-size: $font-size-sm !important;
-    line-height: 14px;
+    lne-height: 14px;
     .category {
       text-transform: uppercase;
       margin-bottom: 0;
