--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -5,6 +5,7 @@
 @import '../../../node_modules/bootstrap/scss/mixins/breakpoints';
 @import '../../../node_modules/bootstrap/scss/mixins/transition';
 @import '../../../node_modules/bootstrap/scss/mixins/hover';
+@import '../../../node_modules/bootstrap/scss/mixins/lists';
 @import '../../../node_modules/bootstrap/scss/root';
 @import '../../../node_modules/bootstrap/scss/reboot';
 @import '../../../node_modules/bootstrap/scss/type';
