Restore product-page scss

--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -24,6 +24,7 @@
 @import "components/audioplayer";
 @import "components/releaselist";
 @import "components/page";
+@import "components/product-page";
 @import "components/release";
 @import "components/alerts";
 @import "components/genres";
