--- a/assets/css/storefront/storefront.scss
+++ b/assets/css/storefront/storefront.scss
@@ -10,6 +10,14 @@
 @import '../../../node_modules/bootstrap/scss/reboot';
 @import '../../../node_modules/bootstrap/scss/type';
 
+@import "../../../node_modules/bootstrap/scss/mixins/grid-framework";
+@import "../../../node_modules/bootstrap/scss/mixins/grid";
+
+@import "../../../node_modules/bootstrap/scss/grid";
+@import "../../../node_modules/bootstrap/scss/utilities/display";
+@import "../../../node_modules/bootstrap/scss/utilities/flex";
+
+
 @import "components/buttons";
 @import "components/labels";
 @import "components/forms";
