--- a/assets/css/storefront/components/_fonts.scss
+++ b/assets/css/storefront/components/_fonts.scss
@@ -21,13 +21,13 @@
 //}
 @font-face {
   font-family: 'Roboto Condensed';
-  src: url('~assets/fonts/RobotoCondensed-Light.ttf') format('truetype');
+  //src: url('~assets/fonts/RobotoCondensed-Light.ttf') format('truetype');
   font-weight: 300;
   font-display: fallback;
 }
 @font-face {
   font-family: 'Roboto Condensed';
-  src: url('~assets/fonts/RobotoCondensed-Regular.ttf') format('truetype');
+  //src: url('~assets/fonts/RobotoCondensed-Regular.ttf') format('truetype');
   font-weight: 400;
   font-display: fallback;
 }
