--- a/assets/css/storefront/components/_fonts.scss
+++ b/assets/css/storefront/components/_fonts.scss
@@ -23,13 +23,13 @@
   font-family: 'Roboto Condensed';
   //src: url('~assets/fonts/RobotoCondensed-Light.ttf') format('truetype');
   font-weight: 300;
-  font-display: fallback;
+  font-display: swap;
 }
 @font-face {
   font-family: 'Roboto Condensed';
   //src: url('~assets/fonts/RobotoCondensed-Regular.ttf') format('truetype');
   font-weight: 400;
-  font-display: fallback;
+  font-display: swap;
 }
 //@font-face {
 //  font-family: 'Roboto Condensed';
